# qwen-riscv-qemu-demo

./: .gitignore  AGENTS.md  ALPINE_ROOTFS_SOLUTION.md  BUILD_INSTRUCTIONS.md  INDEX.md  QWEN_RUN_GUIDE.md  README.md  build_pytorch_qemu_riscv.sh  build_pytorch_riscv.sh  repros_missing_attention_mask.sh  repros_protoc_exec_format.sh  run_qemu_qwen.sh
libtorch_demo/: CMakeLists.txt  export_qwen3_torchscript.py  qwen3_infer.cpp
models/: README.md
overlays/rootfs_alpine/: init
overlays/rootfs_alpine/usr/local/share/qwen/: prompt_tokens.txt
